apps/media/jellyfin/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: jelly
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: jelly.rmikl.pl
    http:
      paths:
      - backend:
          service:
            name: jellyfin
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jelly.rmikl.pl
    secretName: rmikl.pl
